{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 33,
  "lineage": "c483b636-0ddc-1f6b-5270-a9ca2b4db004",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eipnatgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00204672d92e90c54",
            "domain": "vpc",
            "id": "eipalloc-00204672d92e90c54",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-206-55-186.compute-1.amazonaws.com",
            "public_ip": "52.206.55.186",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:internet-gateway/igw-0d5a6d49816ff62c9",
            "id": "igw-0d5a6d49816ff62c9",
            "owner_id": "150273023207",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "tags_all": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-089a6ff63b0f8150a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00204672d92e90c54",
            "connectivity_type": "public",
            "id": "nat-0f18438bd1a4a8edf",
            "network_interface_id": "eni-04b30b1176336c053",
            "private_ip": "10.1.1.147",
            "public_ip": "52.206.55.186",
            "subnet_id": "subnet-0d60bb1af31c9b91a"
          },
          "dependencies": [
            "aws_eip.eipnatgw",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:route-table/rtb-0d57c5dfad0e42020",
            "id": "rtb-0d57c5dfad0e42020",
            "owner_id": "150273023207",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f18438bd1a4a8edf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_private_Table_Routing"
            },
            "tags_all": {
              "Name": "Terraform_private_Table_Routing"
            },
            "timeouts": null,
            "vpc_id": "vpc-089a6ff63b0f8150a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eipnatgw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:route-table/rtb-04961e225c9d497e6",
            "id": "rtb-04961e225c9d497e6",
            "owner_id": "150273023207",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d5a6d49816ff62c9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-testing"
            },
            "tags_all": {
              "Name": "Terraform_Main_table-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-089a6ff63b0f8150a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023930ccfa19125c1",
            "route_table_id": "rtb-0d57c5dfad0e42020",
            "subnet_id": "subnet-08c9ced1928719974"
          },
          "dependencies": [
            "aws_eip.eipnatgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a93ced26c18bf96",
            "route_table_id": "rtb-0d57c5dfad0e42020",
            "subnet_id": "subnet-065ac9d86f4444b8e"
          },
          "dependencies": [
            "aws_eip.eipnatgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0456abda602a45469",
            "route_table_id": "rtb-0d57c5dfad0e42020",
            "subnet_id": "subnet-046e8e95fed11ab83"
          },
          "dependencies": [
            "aws_eip.eipnatgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b878efd3f6e471ad",
            "route_table_id": "rtb-0d57c5dfad0e42020",
            "subnet_id": "subnet-0cd35b79fe67f639c"
          },
          "dependencies": [
            "aws_eip.eipnatgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081e9ff9fdabc090f",
            "route_table_id": "rtb-0d57c5dfad0e42020",
            "subnet_id": "subnet-08480b115a23eee53"
          },
          "dependencies": [
            "aws_eip.eipnatgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ff88a49a0b34f90",
            "route_table_id": "rtb-0d57c5dfad0e42020",
            "subnet_id": "subnet-01ae7acfdd94b62c4"
          },
          "dependencies": [
            "aws_eip.eipnatgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fef1c6b685ecf249",
            "route_table_id": "rtb-04961e225c9d497e6",
            "subnet_id": "subnet-0d60bb1af31c9b91a"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0beb97beae1c0a742",
            "route_table_id": "rtb-04961e225c9d497e6",
            "subnet_id": "subnet-0f1b3e97566c07988"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0549ce99d3608ec",
            "route_table_id": "rtb-04961e225c9d497e6",
            "subnet_id": "subnet-07c7a538f282715ab"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0aff23a1619c959",
            "route_table_id": "rtb-04961e225c9d497e6",
            "subnet_id": "subnet-0e9a3394e255f31e4"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0102500fdca16d711",
            "route_table_id": "rtb-04961e225c9d497e6",
            "subnet_id": "subnet-08f8cd000dd3b9abb"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0deab5263003ba7d1",
            "route_table_id": "rtb-04961e225c9d497e6",
            "subnet_id": "subnet-03092120af70a00b1"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:security-group/sg-03ed6b92e607b24f2",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ed6b92e607b24f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "150273023207",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-089a6ff63b0f8150a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:subnet/subnet-08c9ced1928719974",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c9ced1928719974",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "150273023207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-089a6ff63b0f8150a-public-subnet-1"
            },
            "tags_all": {
              "Name": "vpc-089a6ff63b0f8150a-public-subnet-1"
            },
            "vpc_id": "vpc-089a6ff63b0f8150a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:subnet/subnet-065ac9d86f4444b8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065ac9d86f4444b8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "150273023207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-089a6ff63b0f8150a-public-subnet-2"
            },
            "tags_all": {
              "Name": "vpc-089a6ff63b0f8150a-public-subnet-2"
            },
            "vpc_id": "vpc-089a6ff63b0f8150a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:subnet/subnet-046e8e95fed11ab83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046e8e95fed11ab83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "150273023207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-089a6ff63b0f8150a-public-subnet-3"
            },
            "tags_all": {
              "Name": "vpc-089a6ff63b0f8150a-public-subnet-3"
            },
            "vpc_id": "vpc-089a6ff63b0f8150a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:subnet/subnet-0cd35b79fe67f639c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd35b79fe67f639c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "150273023207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-089a6ff63b0f8150a-public-subnet-4"
            },
            "tags_all": {
              "Name": "vpc-089a6ff63b0f8150a-public-subnet-4"
            },
            "vpc_id": "vpc-089a6ff63b0f8150a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:subnet/subnet-08480b115a23eee53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.1.50.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08480b115a23eee53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "150273023207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-089a6ff63b0f8150a-public-subnet-5"
            },
            "tags_all": {
              "Name": "vpc-089a6ff63b0f8150a-public-subnet-5"
            },
            "vpc_id": "vpc-089a6ff63b0f8150a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:subnet/subnet-01ae7acfdd94b62c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.60.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ae7acfdd94b62c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "150273023207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-089a6ff63b0f8150a-public-subnet-6"
            },
            "tags_all": {
              "Name": "vpc-089a6ff63b0f8150a-public-subnet-6"
            },
            "vpc_id": "vpc-089a6ff63b0f8150a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:subnet/subnet-0d60bb1af31c9b91a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d60bb1af31c9b91a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "150273023207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-089a6ff63b0f8150a-private-subnet-1"
            },
            "tags_all": {
              "Name": "vpc-089a6ff63b0f8150a-private-subnet-1"
            },
            "vpc_id": "vpc-089a6ff63b0f8150a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:subnet/subnet-0f1b3e97566c07988",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1b3e97566c07988",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "150273023207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-089a6ff63b0f8150a-private-subnet-2"
            },
            "tags_all": {
              "Name": "vpc-089a6ff63b0f8150a-private-subnet-2"
            },
            "vpc_id": "vpc-089a6ff63b0f8150a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:subnet/subnet-07c7a538f282715ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c7a538f282715ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "150273023207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-089a6ff63b0f8150a-private-subnet-3"
            },
            "tags_all": {
              "Name": "vpc-089a6ff63b0f8150a-private-subnet-3"
            },
            "vpc_id": "vpc-089a6ff63b0f8150a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:subnet/subnet-0e9a3394e255f31e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9a3394e255f31e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "150273023207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-089a6ff63b0f8150a-private-subnet-4"
            },
            "tags_all": {
              "Name": "vpc-089a6ff63b0f8150a-private-subnet-4"
            },
            "vpc_id": "vpc-089a6ff63b0f8150a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:subnet/subnet-08f8cd000dd3b9abb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f8cd000dd3b9abb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "150273023207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-089a6ff63b0f8150a-private-subnet-5"
            },
            "tags_all": {
              "Name": "vpc-089a6ff63b0f8150a-private-subnet-5"
            },
            "vpc_id": "vpc-089a6ff63b0f8150a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:subnet/subnet-03092120af70a00b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03092120af70a00b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "150273023207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-089a6ff63b0f8150a-private-subnet-6"
            },
            "tags_all": {
              "Name": "vpc-089a6ff63b0f8150a-private-subnet-6"
            },
            "vpc_id": "vpc-089a6ff63b0f8150a"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:vpc/vpc-089a6ff63b0f8150a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d9e1a784fb94e1e3",
            "default_route_table_id": "rtb-08c29660e8bd22b1e",
            "default_security_group_id": "sg-0d7ccbc0424490e61",
            "dhcp_options_id": "dopt-021f5ec2fa227cb1c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-089a6ff63b0f8150a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08c29660e8bd22b1e",
            "owner_id": "150273023207",
            "tags": {
              "Name": "single-instance",
              "Owner": "Sreeharsha Veerapalli",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "single-instance",
              "Owner": "Sreeharsha Veerapalli",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}